# perspective-transformation

./: CMakeLists.txt  README.md
dependencies/glad/: glad.h
src/: config.h  glad.c  main.cpp  triangle_mesh.cpp  triangle_mesh.h
src/shaders/: fragment.txt  vertex.txt
